<?xml version="1.0" encoding="utf-8"?>
<!-- Separators inspired by
https://stackoverflow.com/questions/30916946/android-navigationview-menu-group-divider#30917121 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/user_nav_drawer_main_group">
        <item
            android:id="@+id/navigation_store_analytics"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard" />

        <item
            android:id="@+id/navigation_maps"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/title_maps" />

        <item
            android:id="@+id/navigation_store_list"
            android:icon="@drawable/ic_baseline_store_24"
            android:title="@string/title_stores" />
    </group>

    <group android:id="@+id/user_nav_drawer_store_group">
        <item
            android:id="@+id/navigation_my_store_fragment"
            android:icon="@drawable/ic_baseline_storefront_24"
            android:title="@string/title_my_store" />
    </group>

    <group android:id="@+id/user_nav_drawer_misc_group">
        <item
            android:id="@+id/navigation_user_settings"
            android:title="@string/title_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            />
    </group>
</menu>